# HelenaFramework

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  HelenaWorkspace.code-workspace  LICENSE  README.md
.github/workflows/: analyze_code.yml  build.yml
Dependencies/: CMakeLists.txt
Dependencies/enet/: enet.h
Dependencies/entt/meta/: internal.hpp  meta.hpp
Dependencies/fixed_string/: fixed_string.hpp
Dependencies/inih/: INIReader.h
Dependencies/lua/: CMakeLists.txt
Dependencies/pugixml/: pugiconfig.hpp
Dependencies/sol/: state.hpp  variadic_args.hpp
Examples/: CMakeLists.txt  main.cpp
Examples/Example01/: Application.h  CMakeLists.txt  main.cpp
Examples/Example01/Systems/: Window.h
Examples/Lesson1_Init/: CMakeLists.txt  main.cpp
Examples/Lesson2_Context/: CMakeLists.txt  main.cpp
Examples/Main/: CMakeLists.txt  main.cpp
Examples/Plugins/: CMakeLists.txt  main.cpp
Helena/: Assert.hpp  Concurrency.hpp  Core.hpp  Core.ipp  Defines.hpp  Format.hpp  Hash.hpp  HashComparator.hpp  Helena.hpp  Internal.hpp  Log.hpp  Platform.hpp  Util.hpp  Util.ipp
Helena/Application/: CMakeLists.txt  main.cpp
Helena/Common/: Args.hpp  CMakeLists.txt  Core.hpp  Core.ipp  DynLib.hpp  Format.hpp  HFApp.hpp  HFArgs.hpp  HFDebug.hpp  HFDynLib.hpp  HFHash.hpp  HFMeta.hpp  HFModule.hpp  HFModuleManager.hpp  HFPlatform.hpp  HFPlugin.hpp  HFPluginManager.hpp  HFSingleton.hpp  HFTypeTraits.hpp  HFUtil.hpp  HFXml.hpp  Hash.hpp  Helena.hpp  IPlugin.hpp  Ini.hpp  Meta.hpp  Module.hpp  ModuleManager.hpp  ModuleManager.ipp  Platform.hpp  PluginManager.hpp  PluginManager.ipp  ResourceManager.hpp  ResourceManager.ipp  Service.hpp  Service.ipp  Singleton.hpp  Spinlock.hpp  Util.hpp  Util.ipp  (+1 more)
Helena/Common/Systems/: ConfigManager.hpp  ConfigManager.ipp  ECSystem.hpp  ECSystem.ipp  EntityComponent.hpp  EntityComponent.ipp
Helena/Concurrency/: Internal.hpp  Internal.ipp  MPMCQueue.hpp  MPMCQueue.ipp  ParallelPool.hpp  ParallelPool.ipp  SPSCQueue.hpp  SPSCQueue.ipp  SpecificQueue.hpp  SpecificQueue.ipp  Spinlock.hpp  Spinlock.ipp  SpinlockMutex.hpp  SpinlockMutex.ipp  ThreadPool.hpp  ThreadPool.ipp  ThreadSafeQueue.hpp
Helena/Core/: Context.hpp  Context_old.hpp  Core.hpp  Core.ipp  Events.hpp  State.hpp
Helena/Debug/: Assert.hpp
Helena/Dependencies/: Asio.hpp  ENet.hpp  EnTT.hpp  Entt.hpp  FixedString.hpp  Fmt.hpp  Format.hpp  Function2.hpp
Helena/Engine/: Context.hpp  EState.hpp  Engine.hpp  Engine.ipp  Events.hpp  Log.hpp  Log.ipp  Message.hpp
Helena/Logging/: ColorStyle.hpp  CustomPrint.hpp  FileLogger.hpp  Formatter.hpp  Logging.hpp  Message.hpp  MuteController.hpp  Prefix.hpp  Print.hpp
Helena/Logging/Internal/: LoggerBuffer.hpp
Helena/Memory/: CacheAllocator.hpp
Helena/Module/: CMakeLists.txt
Helena/Module/ModuleConfig/: CMakeLists.txt  Module.cpp
Helena/Module/ModuleConfig/Include/: PluginConfig.hpp
Helena/Module/ModuleConfig/Interface/: IPluginConfig.hpp
Helena/Module/ModuleConfig/Source/: PluginConfig.cpp
Helena/Module/ModuleLog/: CMakeLists.txt  HFMain.cpp  Module.cpp  Module.hpp  PluginLog.cpp
Helena/Module/ModuleLog/Include/: PluginLog.hpp
Helena/Module/ModuleLog/Interface/: IPluginLog.hpp
Helena/Module/ModuleLog/Source/: PluginLog.cpp
Helena/Module/ModuleTestA/: CMakeLists.txt  HFMain.cpp  Module.cpp  Module.hpp  MyPlugin.cpp  MyPlugin.hpp  PluginA.cpp  PluginA.hpp  PluginB.cpp  PluginB.hpp  PluginTestA.cpp
Helena/Module/ModuleTestA/Include/: PluginTestA.hpp
Helena/Module/ModuleTestA/Interface/: IPluginTestA.hpp
Helena/Module/ModuleTestA/Plugins/: PluginTestA.hpp
Helena/Module/ModuleTestA/Source/: PluginTestA.cpp
Helena/Module/ModuleTestB/: CMakeLists.txt  HFMain.cpp  Module.cpp  Module.hpp  PluginC.cpp  PluginC.hpp  PluginTestB.cpp
Helena/Module/ModuleTestB/Include/: PluginTestB.hpp
Helena/Module/ModuleTestB/Interface/: IPluginTestB.hpp
Helena/Module/ModuleTestB/Source/: PluginTestB.cpp
Helena/Module/TestModule/: CMakeLists.txt  Module.cpp
Helena/Module/TestModuleA/: CMakeLists.txt  Module.cpp
Helena/Module/TestModuleB/: Module.cpp
Helena/Network/: Address.hpp  Config.hpp  Connection.hpp  Event.hpp  Message.hpp  Network.hpp  State.hpp  UserData.hpp
Helena/OS/: Linux.hpp  Windows.hpp
Helena/Platform/: Assert.hpp  Compiler.hpp  Defines.hpp  Platform.hpp  Processor.hpp
Helena/Platform/Linux/: Linux.hpp
Helena/Systems/: ConfigManager.hpp  ConfigManager.ipp  EntityComponent.hpp  EntityComponent.ipp  JobManager.hpp  JobManager.ipp  PluginManager.hpp  PluginManager.ipp  PropertyManager.hpp  PropertyManager.ipp  ResourceManager.hpp  ResourceManager.ipp  TaskManager.hpp  TaskManager.ipp
Helena/Traits/: Add.hpp  AnyOf.hpp  Arguments.hpp  CVRefPtr.hpp  Cacheline.hpp  Conditional.hpp  Constness.hpp  Constructible.hpp  Detector.hpp  FNV1a.hpp  Function.hpp  FunctionInfo.hpp  Identity.hpp  IntegralConstant.hpp  Map.hpp  NameOf.hpp  Overloads.hpp  Pair.hpp  PowerOf2.hpp  Remove.hpp  SameAS.hpp  SameAll.hpp  SameAs.hpp  ScopedEnum.hpp  Select.hpp  Specialization.hpp  TypeCounter.hpp  TypeIndex.hpp  Underlying.hpp  UniqueTypes.hpp
Helena/Types/: AlignedStorage.hpp  AlignedStorageV2.hpp  Allocators.hpp  Any.hpp  BasicLogger.hpp  BasicLogger.ipp  BasicLoggerDefines.hpp  BasicLoggersDef.hpp  BenchmarkScoped.hpp  CompressedPair.hpp  DateTime.hpp  Delegate.hpp  Dispatcher.hpp  EncryptedString.hpp  FixedBuffer.hpp  FixedString.hpp  Format.hpp  Function.hpp  Hash.hpp  LocationString.hpp  ModernDesign.hpp  Monostate.hpp  Mutex.hpp  Overloads.hpp  RWLock.hpp  ReferencePointer.hpp  SPSCVector.hpp  SourceLocation.hpp  Spinlock.hpp  StateMachine.hpp  StaticVector.hpp  Storage.hpp  Subsystems.hpp  System.hpp  TSVector.hpp  TaskScheduler.hpp  TimeSpan.hpp  UndefinedContainer.hpp  UniqueIndexer.hpp  UniqueVector.hpp  (+3 more)
Helena/Util/: Cast.hpp  Cast.ipp  ConstexprIf.hpp  Format.hpp  Function.hpp  Length.hpp  Math.hpp  Process.hpp  Sleep.hpp  SourceLocation.hpp  String.hpp
HelenaFramework/Application/: CMakeLists.txt  main.cpp
Systems/: PluginManager.hpp  ResourceManager.hpp
Test/: CMakeLists.txt  test.cpp
(+1 files in other folders)
