add_library(lua STATIC 
    lstrlib.c
    lundump.c
    lmathlib.c
    lopcodes.c
    lcorolib.c
    lfunc.c
    lstate.c
    lutf8lib.c
    lbitlib.c
    loslib.c
    lobject.c
    lapi.c
    lbaselib.c
    lzio.c
    lcode.c
    lparser.c
    llex.c
    liolib.c
    linit.c
    ldump.c
    loadlib.c
    ltablib.c
    lmem.c
    lgc.c
    ldebug.c
    ldblib.c
    ldo.c
    ltm.c
    ltable.c
    lctype.c
    lvm.c
    lstring.c
    lua.c
    lauxlib.c
    luac.c
)
set_target_properties(lua PROPERTIES LINKER_LANGUAGE CXX)